<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Registrar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/inicio_portrait_blur_compressor"
    tools:context=".Activity_registrar">

    <TextView
        android:id="@+id/textView"
        style="@style/textviewInicio"
        android:layout_marginTop="24dp"
        android:text="@string/textviewRegistrarse"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/textNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textNombre"
        style="@style/texto"
        android:layout_marginTop="8dp"
        android:autofillHints="no"
        android:hint="@string/nombreHint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textoApellido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/textoApellido"
        style="@style/texto"
        android:layout_marginTop="8dp"
        android:autofillHints="no"
        android:hint="@string/apellidosHint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textoUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNombre" />

    <EditText
        android:id="@+id/textoUsuario"
        style="@style/texto"
        android:layout_marginTop="16dp"
        android:autofillHints="no"
        android:hint="@string/usuarioHint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textoPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoApellido" />

    <EditText
        android:id="@+id/textoPassword"
        style="@style/texto"
        android:layout_marginTop="20dp"
        android:autofillHints="no"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/textoEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoUsuario" />

    <EditText
        android:id="@+id/textoEmail"
        style="@style/texto"
        android:layout_marginTop="20dp"
        android:autofillHints="no"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/botonEnviar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoPassword" />

    <Button
        android:id="@+id/botonEnviar"
        style="@style/botonIniciar"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/boton_inicio_custom"
        android:text="@string/enviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoEmail"
        app:layout_constraintVertical_bias="0.333" />

</androidx.constraintlayout.widget.ConstraintLayout>