<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Inicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/inicio_portrait_blur_compressor"
    tools:context=".Activity_inicio">

    <TextView
        android:id="@+id/textView"
        style="@style/textviewInicio"
        android:layout_marginTop="24dp"
        android:text="@string/textviewInicio"
        app:layout_constraintBottom_toTopOf="@+id/textoUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012" />

    <EditText
        android:id="@+id/textoUsuario"
        style="@style/texto"
        android:layout_marginBottom="68dp"
        android:autofillHints="no"
        android:hint="@string/usuarioHint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textoPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/textoPassword"
        style="@style/texto"
        android:layout_marginBottom="92dp"
        android:autofillHints="no"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/botonEnviar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/botonEnviar"
        style="@style/botonIniciar"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:layout_marginBottom="84dp"
        android:background="@drawable/boton_inicio_custom"
        android:text="@string/enviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>